event page updated - creating layout

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -21,6 +21,8 @@ nav {
 
 section {
     background-color: whitesmoke;
+    border-left: 1px solid green;
+    border-right: 1px solid green;
 }
 
 footer {
