--- a/views/event.ejs
+++ b/views/event.ejs
@@ -1,9 +1,9 @@
-<section class="container shadow">
-    <article>
+<article>
+
         <form>
             <div class="form-group row">
                 <div class="col-sm-1">.</div>
-                <div class="col-sm-7">
+                <div class="col-sm">
                     <input type="text" class="form-control" id="frmTitle" placeholder="Enter title (i.e. What movie to watch?)">
                 </div>
             </div>
@@ -11,13 +11,13 @@
                 <div class="col-sm-1">
                     <i class="fas fa-align-justify"></i>
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm">
                     <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add description"></textarea>
                 </div>
             </div>
             <div class="form-group row">
                 <div class="col-sm-1">1</div>
-                <div class="col-sm-5">
+                <div class="col-sm">
                     <input type="text" class="form-control" id="frmOption" placeholder="Option name">
                 </div>
                 <div class="col-sm-2">
@@ -32,12 +32,12 @@
                 <div class="col-sm-1">
                     <input type="checkbox" checked id="chkBoolean">
                 </div>
-                <div class="col-sm-3">
+                <div class="col-sm">
                     <input type="text" class="form-control" id="txt_start_date" placeholder="Jun 27 2018">
                 </div>
                 <div class="col-sm-1">to</i>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm">
                     <input type="text" class="form-control" id="txt_end_date" placeholder="Jun 29 2018">
                 </div>
             </div>
@@ -45,10 +45,10 @@
                 <div class="col-sm-1">
                     <i class="fas fa-edit"></i>
                 </div>
-                <div class="col-sm-7">
+                <div class="col-sm">
                     <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add notes"></textarea>
                 </div>
             </div>
         </form>
+
     </article>
-</section>
