--- a/styles/partials/_main_window.scss
+++ b/styles/partials/_main_window.scss
@@ -1,3 +1,7 @@
 #main-window {
-  min-width: 500px;
+  min-width: 700px;
+  min-height: 700px;
+  padding: 0px;
+  border-radius: $page-radius;
+  border: 3px green solid;
 }
