--- a/views/partials/_event_form.ejs
+++ b/views/partials/_event_form.ejs
@@ -1,27 +1,29 @@
 <form>
+
   <div class="form-group row">
     <div class="col-sm-1">.</div>
-    <div class="col-sm-7">
+    <div class="col-sm">
       <input type="text" class="form-control" id="frmTitle" placeholder="Enter title (i.e. What movie to watch?)">
     </div>
   </div>
+
   <div class="form-group row">
     <div class="col-sm-1">
       <i class="fas fa-align-justify"></i>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm">
       <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add description"></textarea>
     </div>
   </div>
+
   <div class="form-group row">
     <div class="col-sm-1">1</div>
-    <div class="col-sm-5">
+    <div class="col-sm">
       <input type="text" class="form-control" id="frmOption" placeholder="Option name">
     </div>
-    <div class="col-sm-2">
-      <i class="fas fa-copy"></i>
-      <i class="fas fa-trash-alt"></i>
-    </div>
+    <div class="col-sm-1"><i class="fas fa-copy"></i></div>
+    <div class="col-sm-1"><i class="fas fa-trash-alt"></i></div>
+    <div class="col-sm-1"></i></div>
   </div>
   <div class="form-group row">
     <div class="col-sm-1">
@@ -30,12 +32,12 @@
     <div class="col-sm-1">
       <input type="checkbox" checked id="chkBoolean">
     </div>
-    <div class="col-sm-3">
+    <div class="col-sm">
       <input type="text" class="form-control" id="txt_start_date" placeholder="Jun 27 2018">
     </div>
     <div class="col-sm-1">to</i>
     </div>
-    <div class="col-sm-2">
+    <div class="col-sm">
       <input type="text" class="form-control" id="txt_end_date" placeholder="Jun 29 2018">
     </div>
   </div>
@@ -43,8 +45,11 @@
     <div class="col-sm-1">
       <i class="fas fa-edit"></i>
     </div>
-    <div class="col-sm-7">
+    <div class="col-sm">
       <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add notes"></textarea>
     </div>
   </div>
+
+  <div class="float-md-left"><input type=button value=preview></div></div>
+
 </form>
