update background, styles and partials

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,21 +6,13 @@
 </head>
 
 <body>
-
-
-
+  <% include partials/_navbar %>
   <section class='container shadow landing-page'>
     <main>
       <% include partials/_landing_message %>
     </main>
-    <footer>
-      <a href='/events' method='GET' type="button" class="btn btn-primary btn-lg">CLICK TO START!</a>
-    </footer>
+    <footer></footer>
   </section>
-
-
-
-
 </body>
 
 </html>
