--- a/views/partials/_landing_message.ejs
+++ b/views/partials/_landing_message.ejs
@@ -1,9 +1,11 @@
 <section>
   <article>
-      <img src="/images/logo.png" alt="quickadoo_logo">
+      <!-- <img src="/images/logo.png" alt="quickadoo_logo"> -->
       <span class='word-block'>
-        <h2>Plan your day with Quickadoo</h2>
-        <p>The Quicker, easier solution to schedule events with your friends!</p>
+        <h2>Plan your day with us!</h2>
+        <p>The Quicker, easier solution to schedule events with your friends</p>
       </span>
+      <!--<a href='/events' method='GET' type="button" class="btn btn-primary btn-lg">CLICK TO START!</a>-->
+      <a href='/events' method='GET'><button class="w3-button w3-green">Click to start!</button></a>
   </article>
 </section>
