--- a/styles/partials/_layout.scss
+++ b/styles/partials/_layout.scss
@@ -6,6 +6,8 @@
 
 html {
   box-sizing: border-box;
+  height: 100%;
+  margin: 0;
 }
 
 *,
@@ -25,4 +27,13 @@ body {
   transform: rotate(-3deg);
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+
+  height: 100%; 
+  margin:0 ;
+
+  background-image: url("/images/background.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
