--- a/styles/partials/_main_window.scss
+++ b/styles/partials/_main_window.scss
@@ -11,6 +11,7 @@
   padding: 0px;
   border-radius: $main-border-radius;
   border: 2px green solid;
+  background-color: whitesmoke;
   section {
     img {
       width: 150px;
@@ -20,5 +21,10 @@
     span {
       display: inline-block;
     }
+  }
+  .word-block {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
   }
 }
