--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -1,13 +1,11 @@
 nav {
-  width: 100%;
-  border-radius: $main-border-radius;
-  img {
-    width: 200px;
-  }
+  width: 50%;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  background-color:whitesmoke;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
 }
-
-// nav {
-//   background-color: whitesmoke;
-//   border-top-left-radius: 20px;
-//   border-top-right-radius: 20px;
-// }
