--- a/views/event.ejs
+++ b/views/event.ejs
@@ -2,19 +2,17 @@
 <html lang="en">
 
 <head>
-    <% include partials/_header %>
+  <% include partials/_header %>
 </head>
 
 <body>
-    <main class='container shadow'>
-        <% include partials/_navbar %>
-            <main>
-                <section>
-                    <% include partials/_event_form %>
-                </section>
-            </main>
-            <footer></footer>
+  <% include partials/_navbar %>
+  <section class='container shadow landing-page'>
+    <main>
+      <% include partials/_event_form %>
     </main>
+    <footer></footer>
+  </section>
 </body>
 
 </html>
