--- a/views/partials/_event_form.ejs
+++ b/views/partials/_event_form.ejs
@@ -3,7 +3,7 @@
   <div class="form-group row">
     <div class="col-sm-1">.</div>
     <div class="col-sm">
-      <input type="text" class="form-control" id="frmTitle" placeholder="Enter title (i.e. What movie to watch?)">
+      <input type="text" class="form-control" id="event_title" name="evt_title" placeholder="Enter title (i.e. What movie to watch?)">
     </div>
   </div>
 
@@ -12,14 +12,14 @@
       <i class="fas fa-align-justify"></i>
     </div>
     <div class="col-sm">
-      <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add description"></textarea>
+      <textarea class="form-control" id="evt_notes" name="evt_notes" rows="3" placeholder="Add description"></textarea>
     </div>
   </div>
 
   <div class="form-group row">
     <div class="col-sm-1">1</div>
     <div class="col-sm">
-      <input type="text" class="form-control" id="frmOption" placeholder="Option name">
+      <input type="text" class="form-control" id="opt_title" name="opt_title" placeholder="Option name">
     </div>
     <div class="col-sm-1"><i class="fas fa-copy"></i></div>
     <div class="col-sm-1"><i class="fas fa-trash-alt"></i></div>
@@ -30,15 +30,15 @@
       <i class="fas fa-clock"></i>
     </div>
     <div class="col-sm-1">
-      <input type="checkbox" checked id="chkBoolean">
+      <input type="checkbox" checked id="boolean" name="boolean">
     </div>
     <div class="col-sm">
-      <input type="text" class="form-control" id="txt_start_date" placeholder="Jun 27 2018">
+      <input type="text" class="form-control" id="opt_start_time" name="opt_start_time" placeholder="Jun 27 2018">
     </div>
     <div class="col-sm-1">to</i>
     </div>
     <div class="col-sm">
-      <input type="text" class="form-control" id="txt_end_date" placeholder="Jun 29 2018">
+      <input type="text" class="form-control" id="opt_end_time" name="opt_end_time" placeholder="Jun 29 2018">
     </div>
   </div>
   <div class="form-group row">
@@ -46,7 +46,7 @@
       <i class="fas fa-edit"></i>
     </div>
     <div class="col-sm">
-      <textarea class="form-control" id="frmDescription" rows="3" placeholder="Add notes"></textarea>
+      <textarea class="form-control" id="opt_notes" name="opt_notes" rows="3" placeholder="Add notes"></textarea>
     </div>
   </div>
 
