--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,6 +1,11 @@
-<nav class="navbar navbar-light bg-light">
+<!-- <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">
     <img src="/images/logo.png" alt="quickadoo_logo">
   </a>
-  <span></span>
+</nav> -->
+
+<nav>
+  <a class="navbar-brand" href="/">
+    <img src="/images/logo.png" alt="quickadoo_logo">
+  </a>
 </nav>
