--- a/styles/partials/_event_page.scss
+++ b/styles/partials/_event_page.scss
@@ -1,10 +1,15 @@
 .event-page {
   border-radius: $radius;
+  margin-top: 100px;
   height: 100%;
   padding: 0;
   text-align: center;
+  h3 {
+    margin-bottom: 20px;
+  }
   form {
     margin: 50px auto;
+    padding: 10px;
     .invalid-feedback {
       text-align: left;
       margin-left: 30px;
@@ -21,7 +26,6 @@
     text-align: right;
   }
   .right-icon {
-    // width: 40%;
     display: flex;
     justify-content: space-around;
     * {
@@ -41,7 +45,7 @@
     display: none;
   }
   #counter {
-    font-size: 24px; // vertical-align: super;
+    font-size: 24px;
     display: none;
     float: right;
     margin-left: 10px;
