--- a/views/partials/_event_form.ejs
+++ b/views/partials/_event_form.ejs
@@ -1,4 +1,5 @@
 <form id='event-form' class='needs-validation col-xl-8 col-lg-8 col-md-10 col-sm-12' novalidate>
+  <h3>Please fill in the form</h3>
   <!-- user info -->
   <div class='user'>
     <!-- name -->
