--- a/views/partials/_option_form.ejs
+++ b/views/partials/_option_form.ejs
@@ -28,7 +28,7 @@
   <div class='form-group'>
     <div class='input-group'>
       <i class='material-icons left-icon'>create</i>
-      <textarea name='note' class='form-control' value='<% if(locals.option){ %><%- option.note %><% } %>' placeholder='Add notes'></textarea>
+      <textarea name='note' class='form-control' placeholder='Add notes'><% if(locals.option){ %><%- option.note %><% } %></textarea>
     </div>
   </div>
 </div>
