added span.host-name to dynamically add host name

--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -14,13 +14,21 @@
       <div class="input-group col-xl-5 col-lg-6 col-md-8 col-sm-11 col-12">
         <span class="input-group-addon">
           <i class="material-icons">file_copy</i>
+          <span class='url'>
+            <span class='host-name'></span>
+            <%= `${formData[0].poll_url}` %>
+          </span>
         </span>
-        <input type="text" readonly class="form-control" value='<%= `localhost:8080/events/${formData[0].poll_url}` %>'
-        />
       </div>
     </article>
     <span class="alert alert-danger" role="alert">
-      <%= `Admin URL: localhost:8080/events/${formData[0].admin_url}` %>
-    </span>
-    <% } %>
+      <span class="input-group-addon">
+        <i class="material-icons">file_copy</i>
+        Admin URL:
+        <span class='url'>
+          <span class='host-name'></span>
+          <%= `${formData[0].admin_url}` %>
+        </span>
+      </span>
+      <% } %>
 </section>
