--- a/styles/partials/_navbar.scss
+++ b/styles/partials/_navbar.scss
@@ -1,4 +1,12 @@
 section.nav-wrapper {
+  span.input-group-addon {
+    display: flex;
+    align-items: center;
+    i.material-icons {
+      font-size: 30px;
+      color: #00897b;
+    }
+  }
   div.container {
     display: flex;
     justify-content: center;
@@ -8,21 +16,13 @@ section.nav-wrapper {
   }
   article.nav-alert-wrapper {
     * {
-      margin: 0px auto;
-      background-color: #d4edda;
-      border-color: #c3e6cb;
+      margin: 2px auto;
     }
     .input-group {
-      margin: 15px auto 0;
       &:hover {
         border: 2px #64b5f6 solid;
         border-radius: $radius;
       }
-    }
-    i.material-icons {
-      vertical-align: middle;
-      font-size: 42px;
-      color: #00897b;
     }
     input[type="text"] {
       font-size: 20px;
