replaced hardcoded "localhost:8080" with dynamically called hostname

--- a/views/partials/_thanks.ejs
+++ b/views/partials/_thanks.ejs
@@ -6,7 +6,7 @@
   </main>
   <footer>
     <a href="/events/<%= locals.url %>">
-      <span class='host-name'></span>events/
+      <span class='host-name'></span>
       <%= locals.url %>
     </a>
   </footer>
